# rs_learning

./: .gitignore  CMakeLists.txt  README.md  README.md~  package.xml
cmake/: rs_learning_config.cmake
data/: readme.txt
data/trainedData/: readme.txt
descriptors/analysis_engines/: classify_offline.xml  dbwriter.xml  model_trainer.xml  my_demo.xml
descriptors/annotators/: RSGBAnnotator.xml  RSRFAnnotator.xml  RSSvmAnnotator.xml  classifyOfflineAnnotator.xml  trainerAnnotator.xml
descriptors/typesystem/: all_types.xml
include/rs_learning/: RSClassifier.h  RSGBT.h  RSKNN.h  RSRF.h  RSSVM.h  RSSvm.h~
include/rs_learning/types/: all_types.h  type_definitions.h
src/: RSClassifier.cpp  RSGBAnnotator.cpp  RSGBT.cpp  RSKNN.cpp  RSKNNAnnotator.cpp  RSRF.cpp  RSRFAnnotator.cpp  RSSVM.cpp  RSSvmAnnotator.cpp  classifyOfflineAnnotator.cpp  trainerAnnotator.cpp
src/ext/: featureExtractor.cpp
